--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^9.0.11",
@@ -43,8 +45,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "npx prettier --write",
-      "eslint src/*.{js,jsx,ts,tsx} --fix-dry-run --no-error-on-unmatched-pattern"
+      "npx prettier --write"
     ]
   }
 }
